crates/edm-core/tests/snapshots/render__poi_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS FOUND BY SCAN  2 points =================================================================
+------------+------------------+--------------------+------------------+--------------------------+
|  Market ID | Name             | Type               | Economy          | Faction                  |
+============+==================+====================+==================+==========================+
| ORBIS STARPORT                                                                                   |
+------------+------------------+--------------------+------------------+--------------------------+
| 3229028096 | Jameson Memoria~ | Orbis Starport Ty~ | High Technology~ | The Pilots Federation o~ |
+------------+------------------+--------------------+------------------+--------------------------+
| FLEET CARRIER                                                                                    |
+------------+------------------+--------------------+------------------+--------------------------+
| 3700286976 | K7Q-BQL Nostrom~ | Drake Class Carri~ | Colony           | Independent Pilot        |
+------------+------------------+--------------------+------------------+--------------------------+
   columns hidden to fit 100 cols: Found at
