crates/edm-core/tests/snapshots/render__poi_wide_w200.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS FOUND BY SCAN  2 points =====================================================================================================================================================================
+------------+------------------------------------+--------------------+------------------+--------------------------+------------------------------+
|  Market ID | Name                               | Type               | Economy          | Faction                  | Found at                     |
+============+====================================+====================+==================+==========================+==============================+
| ORBIS STARPORT                                                                                                                                    |
+------------+------------------------------------+--------------------+------------------+--------------------------+------------------------------+
| 3229028096 | Jameson Memorial Fleet Landing Pad | Orbis Starport Ty~ | High Technology~ | The Pilots Federation o~ | starsystem.polities.0.marke~ |
+------------+------------------------------------+--------------------+------------------+--------------------------+------------------------------+
| FLEET CARRIER                                                                                                                                     |
+------------+------------------------------------+--------------------+------------------+--------------------------+------------------------------+
| 3700286976 | K7Q-BQL Nostromo Deep Space Anchor | Drake Class Carri~ | Colony           | Independent Pilot        | starsystem.polities.1.marke~ |
+------------+------------------------------------+--------------------+------------------+--------------------------+------------------------------+
