crates/edm-core/tests/snapshots/render__poi_wide_w60.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS FOUND BY SCAN  2 points =========================
+------------+------------------------+--------------------+
|  Market ID | Name                   | Type               |
+============+========================+====================+
| ORBIS STARPORT                                           |
+------------+------------------------+--------------------+
| 3229028096 | Jameson Memorial Flee~ | Orbis Starport Ty~ |
+------------+------------------------+--------------------+
| FLEET CARRIER                                            |
+------------+------------------------+--------------------+
| 3700286976 | K7Q-BQL Nostromo Deep~ | Drake Class Carri~ |
+------------+------------------------+--------------------+
   columns hidden to fit 60 cols: Found at, Faction, Economy
