crates/edm-core/tests/snapshots/render__poi_wide_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== MARKETS FOUND BY SCAN  2 points =============================================
+------------+-------------------------+--------------------+------------------+
|  Market ID | Name                    | Type               | Economy          |
+============+=========================+====================+==================+
| ORBIS STARPORT                                                               |
+------------+-------------------------+--------------------+------------------+
| 3229028096 | Jameson Memorial Fleet~ | Orbis Starport Ty~ | High Technology~ |
+------------+-------------------------+--------------------+------------------+
| FLEET CARRIER                                                                |
+------------+-------------------------+--------------------+------------------+
| 3700286976 | K7Q-BQL Nostromo Deep ~ | Drake Class Carri~ | Colony           |
+------------+-------------------------+--------------------+------------------+
   columns hidden to fit 80 cols: Found at, Faction
