crates/edm-core/tests/snapshots/render__sweep_narrow_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== SWEEP RESULTS  2 markets ========================================================================
+------------+------------------+------+------+-----+-----+------+-----+
|  Market ID | Name             | HTTP | Comm | Sup | Dem | EDDN | Try |
+============+==================+======+======+=====+=====+======+=====+
| 3229028096 | Jameson Memorial |  200 |  112 |  44 |  51 | sent |   1 |
| 3223343616 | Abraham Lincoln  |  429 |    - |   - |   - | -    |   3 |
+------------+------------------+------+------+-----+-----+------+-----+
